--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joshua Martinez</title>
+    <link rel="stylesheet" href="style/index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header-container">
+            <div class="title-container">
+                Joshua Martinez
+            </div><!--title-container-->
+            <div class="nav-container">
+                <nav>
+                    <a class="home" href="#">Home</a>
+                    <a class="about" href="#">About</a>
+                    <a class="contact" href="#">Contact</a>
+                    <a class="projects" href="#">Projects</a>
+                </nav>
+            </div><!--nav-container-->
+            <div class="content-container">
+                <div class="content-top">Introducing Website</div>
+                <div class="content-bottom">Website content</div>
+            </div><!--content-container-->
+        </div><!--header-container-->
+        <div class="main-project">
+            Main Project Displayed Here
+        </div><!--main-project-->
+        <div class="projects-container"></div><!--projects-container-->
+        <div class="footer-container">
+            <footer>
+                Contact Me
+            </footer>
+        </div><!--footer-container-->
+    </div><!--container-->
 </body>
 </html>
