edited about, contact, index, projects.html files & index.css

--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,38 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=    <h1> ABOUT </h1>, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Joshua Martinez</title>
+    <link rel="stylesheet" href="style/index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <h1> CONTACT </h1>
+    <div class="container">
+        <div class="header-container">
+            <header>
+                <div class="title-container">
+                    Joshua Martinez
+                </div><!--title-container-->
+                <div class="nav-container">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="contact.html">Contact</a>
+                        <a href="projects.html">Projects</a>
+                    </nav>
+            </header>
+        </div>
+        <div class="main-project">
+            Contact
+        </div><!--main-project-->
+    <div class="footer-container">
+        <footer>
+            <a href="contact.html">Contact Me</a>
+        </footer>
+    </div><!--footer-container-->
+</div><!--container-->
 </body>
 </html>
