--- a/index.html
+++ b/index.html
@@ -5,34 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joshua Martinez</title>
     <link rel="stylesheet" href="style/index.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
         <div class="header-container">
-            <div class="title-container">
-                Joshua Martinez
-            </div><!--title-container-->
-            <div class="nav-container">
-                <nav>
-                    <a class="home" href="#">Home</a>
-                    <a class="about" href="#">About</a>
-                    <a class="contact" href="#">Contact</a>
-                    <a class="projects" href="#">Projects</a>
-                </nav>
-            </div><!--nav-container-->
-            <div class="content-container">
-                <div class="content-top">Introducing Website</div>
-                <div class="content-bottom">Website content</div>
-            </div><!--content-container-->
+            <header>
+                <div class="title-container">
+                    Joshua Martinez
+                </div><!--title-container-->
+                <div class="nav-container">
+                    <nav>
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="contact.html">Contact</a>
+                        <a href="projects.html">Projects</a>
+                    </nav>
+                </div><!--nav-container-->
+                <div class="content-container">
+                    <div class="content-top">
+                        <span>My dream </span>of becoming a professional developer started
+                    </div><!--content-top-->
+                    <div class="content-bottom">
+                        in my AOL days. The internet was still new to most, stuck on <br>
+                        It was a different world online back then that majority of people <br>
+                        wouldn't know about. 56K dial-up. I started with chat room programs <br>
+                        with Visual Basics 4 and upgraded to a multi-purpose AOL chat room <br>
+                        program with built-in MP3 player. Many moons ago. Got into HTML <br>
+                        to show my programs world wide and fell in love with the programming <br>
+                        language. So here are a few of my modern day projects I've worked on. <br>
+                        Thanks for stopping in, feel free to shoot me an email. <br><br><br>
+                        <span>-Joshua Martinez</span>
+                    </div><!--content-bottom-->
+                </div><!--content-container-->
+            </header>
         </div><!--header-container-->
         <div class="main-project">
             Main Project Displayed Here
         </div><!--main-project-->
-        <div class="projects-container"></div><!--projects-container-->
+        <div class="projects-container">
+            <div class="projects-left">
+                <div class="project">Project 1</div>
+                <div class="project">Project 2</div>
+                <div class="project">Project 3</div>
+                <div class="project">Project 4</div>
+            </div>
+            <div class="projects-right">
+                Here are a few of <br>my latest projects.
+            </div>
+        </div><!--projects-container-->
         <div class="footer-container">
             <footer>
-                Contact Me
+                <a href="contact.html">Contact Me</a>
             </footer>
         </div><!--footer-container-->
     </div><!--container-->
