added new avatar img, new project imgs, modified about,contact,index,projects.html & index.css

--- a/about.html
+++ b/about.html
@@ -26,12 +26,18 @@
                     </nav>
             </header>
         </div>
-        <div class="main-project">
-            About
-        </div><!--main-project-->
+        <div class="about-container">
+            <div class="about-left">
+                <img src="images/avatar.jpg" />
+            </div>
+            <div class="about-right">
+                <div class="left">Name:<br>Age:<br>Location:</div>
+                <div class="right">Joshua Martinez<br>36<br>Lowell, Massachusetts</div>
+            </div>
+        </div><!--about-->
     <div class="footer-container">
         <footer>
-            <a href="contact.html">Contact Me</a>
+            <a href="mailto:'mrjoshuamartinez@gmail.com'">Contact Me</a>
         </footer>
     </div><!--footer-container-->
 </div><!--container-->
