--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,16 @@
                     </nav>
             </header>
         </div>
-        <div class="main-project">
-            Contact
+        <div class="social-media">
+            <nav>
+                <a href="https://www.facebook.com/j0shuamartinez"><img src="https://i.ibb.co/WgrWy4R/pngguru-com.png" height="35" /></a>
+                <a href="https://www.instagram.com/mrjoshuamartinez/"><img src="https://i.ibb.co/PDh4V25/pngguru-com-1.png" height="35" /></a>
+                <a href="mailto:'mrjoshuamartinez@gmail.com'"><img src="https://i.ibb.co/18kvwyD/pngguru-com-2.png" height="35"/></a>
+                </nav>
         </div><!--main-project-->
     <div class="footer-container">
         <footer>
-            <a href="contact.html">Contact Me</a>
+            <a href="mailto:'mrjoshuamartinez@gmail.com'">Contact Me</a>
         </footer>
     </div><!--footer-container-->
 </div><!--container-->
