--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             </header>
         </div><!--header-container-->
         <div class="main-project">
-            Main Project Displayed Here
+            <img src="images/project2.jpg" />
         </div><!--main-project-->
         <div class="projects-container">
             <div class="projects-left">
-                <div class="project">Project 1</div>
-                <div class="project">Project 2</div>
-                <div class="project">Project 3</div>
-                <div class="project">Project 4</div>
+                <div class="project"><img src="images/project2.jpg" /></div>
+                <div class="project"><img src="images/project2.jpg" /></div>
+                <div class="project"><img src="images/project2.jpg" /></div>
+                <div class="project"><img src="images/project2.jpg" /></div>
             </div>
             <div class="projects-right">
                 Here are a few of <br>my latest projects.
@@ -59,7 +59,7 @@
         </div><!--projects-container-->
         <div class="footer-container">
             <footer>
-                <a href="contact.html">Contact Me</a>
+                <a href="mailto:'mrjoshuamartinez@gmail.com'">Contact Me</a>
             </footer>
         </div><!--footer-container-->
     </div><!--container-->
