--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,26 @@
                     </nav>
             </header>
         </div>
-        <div class="main-project">
-            Projects
-        </div><!--main-project-->
+            <div class="box-container">
+                <div class="boxes">
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                </div>
+                <br><br><br>
+                <div class="boxes">
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                    <img src="images/project2.jpg" />
+                </div>
+            </div><!--box-container-->
     <div class="footer-container">
         <footer>
-            <a href="contact.html">Contact Me</a>
+            <a href="mailto:'mrjoshuamartinez@gmail.com'">Contact Me</a>
         </footer>
     </div><!--footer-container-->
 </div><!--container-->
