modified html and css for 4 breakpoints

--- a/mobile.html
+++ b/mobile.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joshua Martinez</title>
-    <link rel="stylesheet" type="text/css" href="./style/index.css" />
+    <link rel="stylesheet" href="style/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet" />
@@ -27,7 +27,7 @@
                 </div><!--nav-container-->
                 <div class="content-container">
                     <div class="content">
-                        <span>My dream</span>of becoming a professional developer started
+                        <span>My dream </span>of becoming a professional developer started
                         in my AOL days. The internet was still new to most, stuck on 
                         It was a different world online back then that majority of people 
                         wouldn't know about. 56K dial-up. I started with chat room programs 
@@ -37,7 +37,7 @@
                         language. So here are a few of my modern day projects I've worked on. 
                         Thanks for stopping in, feel free to shoot me an email. <br><br>
                         <span>-Joshua Martinez</span>
-                    </div><!--content-bottom-->
+                    </div><!--content-->
                 </div><!--content-container-->
             </header>
         </div><!--header-container-->
@@ -52,8 +52,8 @@
                 <div class="project"><img src="images/project2.jpg" /></div>
             </div>
             <div class="projects-text">
-                Here are a few of my latest projects.
-            </div>
+                Here are a few of <br>my latest projects.
+            </div><!--projects-text-->
         </div><!--projects-container-->
         <div class="footer-container">
             <footer>
